<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gallery</string>
    <string name="welcome_to_gallery">Welcome To Gallery</string>
    <string name="we_need_permission">We Needs Storage Permission for Accessing Image Files.</string>
    <string name="click_here_to_grant">Click here to grant permission for accessing your image files.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="sort">Sort</string>
    <string name="next">Next</string>
    <string name="picture">Pictures</string>
    <string name="loading">Loading...</string>
    <string name="latest">Latest</string>
    <string name="name_a_z">Name A-Z</string>
    <string name="name_z_a">Name Z-A</string>
    <string name="oldest">Oldest</string>
    <string name="size_largest">Size Largest</string>
    <string name="size_smallest">Size Smallest</string>
    <string name="search_your_gallery">Search your Gallery</string>
    <string name="about">About</string>
    <string name="albums">Albums</string>
    <string name="liked">Liked</string>
    <string name="videos">Videos</string>
    <string name="name">Name</string>
    <string name="images">Images</string>
    <string name="set_as">Set As</string>
    <string name="print">Print</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="cancel">Cancel</string>
    <string name="path">Path</string>
    <string name="timestamp">Timestamp</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="close">Close</string>
    <string name="time_intervals">Time Intervals</string>
    <string name="seconds">Seconds</string>
    <string name="start">Start</string>
    <string name="slide_show_started">Slide Show Started</string>
    <string name="slide_show_terminated">Slide Show Terminated</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do You Want To Delete this Image ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_permanently">Do You Want to Delete This Images Permanently ?</string>
    <string name="selected">Selected</string>
    <string name="save">Save</string>
    <string name="free">Free</string>
    <string name="fit">Fit</string>
    <string name="square">Square</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="sharpness">Sharpness</string>
    <string name="save_without">Do You Want to Leave Without Save ?</string>
    <string name="deleting">Deleting...</string>
    <string name="deleted">Deleted</string>
    <string name="details">Details</string>
    <string name="nothing_here">Nothing here</string>
    <string name="general">General</string>
    <string name="grid_size">Grid Size</string>
    <string name="two_column">2 Column</string>
    <string name="three_column">3 Column</string>
    <string name="open_camera">Open Camera</string>
    <string name="show_titles">Show Titles</string>
</resources>