<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/sort"
        ></TextView>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sort"
        android:layout_marginTop="20dp"

        android:id="@+id/line"
        ></com.google.android.material.divider.MaterialDivider>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/name_a_z"
            android:id="@+id/name"
            android:clickable="true"
            android:textSize="15dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/name_z_a"
            android:id="@+id/nameR"
            android:clickable="true"
            android:textSize="15dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/latest"
            android:id="@+id/latest"
            android:clickable="true"
            android:textSize="15dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/oldest"
            android:clickable="true"
            android:id="@+id/oldest"
            android:textSize="15dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/size_largest"
            android:clickable="true"
            android:id="@+id/size"
            android:textSize="15dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/size_smallest"
            android:id="@+id/sizeR"
            android:textSize="15dp"
            android:clickable="true"
            android:gravity="start|center"
            android:paddingStart="20dp"
            ></TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>