<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValidatorActivity">


    <ImageView
        android:id="@+id/welcomeIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gallery"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_gallery"
        android:textSize="25dp"
        android:textStyle="bold"
        android:id="@+id/welcomeText"
        app:layout_constraintTop_toTopOf="@id/welcomeIcon"
        app:layout_constraintBottom_toBottomOf="@id/welcomeIcon"
        app:layout_constraintStart_toEndOf="@id/welcomeIcon"
        android:layout_marginStart="15dp"
        ></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/welcomeIcon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:id="@+id/infoText"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        android:layout_marginTop="25dp"
        android:textSize="20dp"

        android:text="@string/we_need_permission"
        ></TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/toolText"
        app:layout_constraintTop_toBottomOf="@id/infoText"
        app:layout_constraintStart_toStartOf="@id/infoText"
        app:layout_constraintEnd_toEndOf="@id/infoText"
        android:layout_marginTop="25dp"
        android:text="@string/click_here_to_grant"
        ></TextView>

    <Button
        android:id="@+id/permissionButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/grant_permission"

        app:layout_constraintEnd_toEndOf="@id/infoText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/infoText"
        app:layout_constraintTop_toBottomOf="@id/toolText"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>