<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editor.AdjustActivity">

    <android.opengl.GLSurfaceView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imgView"

        app:layout_constraintBottom_toTopOf="@id/bottomHandler"
        ></android.opengl.GLSurfaceView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottomHandler"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:id="@+id/brightnessText"
            app:layout_constraintTop_toTopOf="@id/brightnessSlider"
            app:layout_constraintBottom_toBottomOf="@id/brightnessSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            ></TextView>
        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/brightnessSlider"

            android:valueFrom="-0.50"
            android:valueTo="0.50"
            android:value="0.0"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="90dp"

            android:layout_marginEnd="20dp"
            ></com.google.android.material.slider.Slider>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrast"
            android:id="@+id/contrastText"
            app:layout_constraintTop_toTopOf="@id/contrastSlider"
            app:layout_constraintBottom_toBottomOf="@id/contrastSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            ></TextView>
        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/brightnessSlider"
            android:id="@+id/contrastSlider"

            android:valueFrom="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="90dp"
            android:valueTo="2.0"
            android:value="1.0"

            android:layout_marginEnd="20dp"
            ></com.google.android.material.slider.Slider>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturation"
            android:id="@+id/saturationText"
            app:layout_constraintTop_toTopOf="@id/saturationSlider"
            app:layout_constraintBottom_toBottomOf="@id/saturationSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            ></TextView>
        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contrastSlider"
            android:id="@+id/saturationSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="90dp"
            android:valueFrom="0.0"
            android:valueTo="2.0"
            android:value="1.0"
            android:layout_marginEnd="20dp"
            ></com.google.android.material.slider.Slider>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharpness"
            android:id="@+id/sharperText"
            app:layout_constraintTop_toTopOf="@id/sharperSlider"
            app:layout_constraintBottom_toBottomOf="@id/sharperSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            ></TextView>
        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/saturationSlider"
            android:id="@+id/sharperSlider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="90dp"
            android:valueFrom="-1.50"
            android:valueTo="1.50"
            android:value="0.0"

            android:layout_marginEnd="20dp"
            ></com.google.android.material.slider.Slider>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:icon="@drawable/check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/save"
            app:layout_constraintTop_toBottomOf="@id/sharperSlider"
            app:layout_constraintStart_toEndOf="@id/close"
            ></com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:icon="@drawable/close"
            app:layout_constraintTop_toBottomOf="@id/sharperSlider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toStartOf="@id/save"
            android:id="@+id/close"
            ></com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>