<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".editor.CropperAndRotateActivity">


    <com.isseiaoki.simplecropview.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"


        android:layout_width="match_parent"
        android:layout_height="0dp"

        custom:layout_constraintTop_toTopOf="parent"

        custom:scv_crop_mode="fit_image"
        custom:scv_guide_show_mode="show_always"
        custom:scv_handle_show_mode="show_always"
        custom:scv_handle_size="10dp"
        custom:scv_touch_padding="7dp"
        custom:scv_min_frame_size="50dp"
        custom:scv_frame_stroke_weight="1dp"
        custom:scv_guide_stroke_weight="1dp"
        custom:scv_crop_enabled="true"
        custom:scv_initial_frame_scale="1.0"
        custom:scv_animation_enabled="true"
        custom:scv_animation_duration="200"
        custom:layout_constraintBottom_toTopOf="@id/bottoHandler"
        custom:scv_handle_shadow_enabled="true"
        android:layout_margin="30dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottoHandler"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/rotate_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:id="@+id/rotate"
            app:layout_constraintEnd_toStartOf="@id/free"
            ></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="@id/rotate"
            android:id="@+id/free"
            app:layout_constraintEnd_toStartOf="@id/r_16_9"

            app:layout_constraintStart_toEndOf="@id/rotate"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16:9"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="@id/rotate"
            android:id="@+id/r_16_9"

            app:layout_constraintEnd_toStartOf="@id/r_3_4"
            app:layout_constraintStart_toEndOf="@id/free"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3:4"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="@id/rotate"
            android:id="@+id/r_3_4"

            app:layout_constraintEnd_toStartOf="@id/r_4_3"
            app:layout_constraintStart_toEndOf="@id/r_16_9"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4:3"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="@id/rotate"
            android:id="@+id/r_4_3"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/r_3_4"
            ></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/free"
            android:id="@+id/fit"
            android:layout_marginTop="20dp"
           app:layout_constraintStart_toStartOf="@id/free"
            app:layout_constraintEnd_toEndOf="@id/free"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/free"
            android:id="@+id/square"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/r_16_9"
            app:layout_constraintEnd_toEndOf="@id/r_16_9"
            ></TextView>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:icon="@drawable/check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:id="@+id/save"
            app:layout_constraintStart_toEndOf="@id/close"
            ></com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:icon="@drawable/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toStartOf="@id/save"
            android:id="@+id/close"
            ></com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>