<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PhotoFragment">

    <com.vaibhav.gallery.collectiondb.store.tool.NestedScrollCoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mCoordinate"
        >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:id="@+id/mAppBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mConstraint"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:textSize="30dp"
                android:visibility="visible"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="90dp"
                android:layout_marginStart="20dp"
                android:id="@+id/headText"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/loading"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/headText"
                android:id="@+id/count"
                app:layout_constraintTop_toBottomOf="@id/headText"
                ></TextView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:text="@string/latest"
                app:icon="@drawable/arrow_up"
                android:id="@+id/sort"

                app:layout_constraintTop_toTopOf="@id/headText"
                app:layout_constraintBottom_toBottomOf="@id/count"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"

                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                ></com.google.android.material.button.MaterialButton>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/count"
                android:indeterminate="true"
                android:id="@+id/progressIndiactor"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/count"
                app:layout_constraintEnd_toEndOf="@id/sort"
                ></com.google.android.material.progressindicator.LinearProgressIndicator>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/photoRecycle"

                android:layoutAnimation="@anim/layout_slide_from_bottom"
                ></androidx.recyclerview.widget.RecyclerView>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_rawRes="@raw/empty"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:id="@+id/lottieView"
                android:visibility="gone"
                ></com.airbnb.lottie.LottieAnimationView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing_here"
                android:textSize="20dp"

                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/lottieView"
                android:id="@+id/nothing"
                android:visibility="gone"
                android:layout_margin="10dp"
                ></TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.vaibhav.gallery.collectiondb.store.tool.NestedScrollCoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>